# carRentals

./: .gitignore  README.md
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-781d6e3a3f7a1301e92a.json  codemodel-v2-67b2784bec505cd45430.json  codemodel-v2-7ce5947d051b5ebfa4bc.json  codemodel-v2-bf7d80b311ebc170ecd1.json  index-2022-04-30T05-59-22-0342.json  index-2022-05-04T13-23-54-0621.json  index-2022-05-04T14-00-02-0351.json  target-carRentalTest-Debug-525a07d15fb0554ca23a.json  (+3 more)
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/carRentalTest_autogen/: deps  mocs_compilation.cpp
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/carRentalTest_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-carRentalTest-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/carRentalTest_autogen/include/: ui_mainwindow.h
build-carRentalTest-Qt_6_2_4_for_macOS-Debug/: build.ninja  cmake_install.cmake
build-carRentalTest-Qt_6_2_4_for_macOS-Debug/carRentalTest_autogen/: deps  moc_predefs.h
build-carRentalTest-Qt_6_2_4_for_macOS-Debug/carRentalTest_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
carRentalTest/: CMakeLists.txt  CMakeLists.txt.user.061d024  addcar.cpp  addcar.h  addcar.ui  addcustomer.cpp  addcustomer.h  addcustomer.ui  database.cpp  database.h  dialogcars.cpp  dialogcars.h  dialogcars.ui  dialogorders.cpp  dialogorders.h  dialogorders.ui  listall.cpp  listall.h  listall.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mainwindow.ui.autosave.xml  person.cpp  person.h  popuporders.cpp  popuporders.h  popuporders.ui
(+84 files in other folders)
